@@ -28,7 +28,10 @@ probably in an initialization target.</p>
     <td valign="top"><b>Description</b></td>
     <td align="center" valign="top"><b>Required</b></td>
   </tr>
-  <tr> <td colspan="3"> No parameters</td>
+  <tr>
+    <td valign="top">prefix</td>
+    <td valign="top">Prefix used for all properties set. The default is no prefix.</td>
+    <td align="center" valign="top">No</td>
   </tr>
 </table>
 
@@ -123,10 +126,18 @@ using English locale (eg. 21-May-2001).</p>
 </pre>
 <p>
 Creates a timestamp, in the property touch.time, 5 hours before the current time. The format in this example
-is suitable for use with the &lt;touch&gt; task</p>
+is suitable for use with the &lt;touch&gt; task. The standard properties are set also.</p>
+
+<pre>
+  &lt;tstamp prefix="start"/&gt;
+</pre>
+<p>
+Sets three properties with the standard formats, prefixed with "start.": 
+<code>start.DSTAMP</code>, <code>start.TSTAMP</code>, and <code>start.TODAY</code>.</p>
+
 
 <hr>
-<p align="center">Copyright &copy; 2001 Apache Software Foundation. All rights Reserved.</p>
+<p align="center">Copyright &copy; 2002 Apache Software Foundation. All rights Reserved.</p>
 
 </body>
 </html>
